--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "ws": "^7.4.6"
+    "ws": "^7.4.6",
+     "uuid": "^8.3.2"
   },
   "engines": {
     "node": ">=14.0.0"
